--- a/app/src/main/res/values-w1240dp/strings.xml
+++ b/app/src/main/res/values-w1240dp/strings.xml
@@ -6,4 +6,5 @@
     <string name="content_description_search">Recherche</string>
     <string name="more">More</string>
     <string name="content_description_more">Plus</string>
+    <string name="new_objectif">Nouvelle objectif</string>
 </resources>
