--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="content_description_search">Recherche</string>
     <string name="more">More</string>
     <string name="content_description_more">Plus</string>
+    <string name="new_objectif">Nouvelle objectif</string>
 </resources>
