--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="more">More</string>
     <string name="content_description_more">Plus</string>
     <string name="new_objectif">Nouvelle objectif</string>
+    <string name="add_enter_title">Enter title</string>
+    <string name="add_photo">Choisir une photo</string>
 </resources>
