--- a/app/src/main/res/values-w600dp/strings.xml
+++ b/app/src/main/res/values-w600dp/strings.xml
@@ -7,4 +7,5 @@
     <string name="more">More</string>
     <string name="content_description_more">Plus</string>
     <string name="new_objectif">Nouvelle objectif</string>
+    <string name="add_photo">Choisir une photo</string>
 </resources>
